--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		.table{margin-top: 20px;}
 		.table tr, td{text-align: left;}
 		.form-control{margin-bottom: 5px;}
+		.selecionado{background-color: #F7DC6F;}
 	</style>
 	<script type="text/javascript" src="lib/angular/angular.js"></script>
 	<script type="text/javascript">
@@ -21,13 +22,30 @@
 		angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function($scope){
 			$scope.app = "Lista Telefonica";
 			$scope.contatos = [
-				{nome: "Pedro", telefone: 99998888},
-				{nome: "Ana", telefone: 99998877},
-				{nome: "Maria", telefone: 99998866}
+				{nome: "Pedro", telefone: 99998888, cor: 'yellow'},
+				{nome: "Ana", telefone: 99998877, cor: 'green'},
+				{nome: "Maria", telefone: 99998866, cor: 'red'}
+			];
+			$scope.operadoras = [
+				{nome: "Oi", codigo: 14, categoria: "celular"},
+				{nome: "Vivo", codigo: 15, categoria: "celular"},
+				{nome: "Tim", codigo: 41, categoria: "celular"},
+				{nome: "GVT", codigo: 25, categoria: "fixo"},
+				{nome: "Embratel", codigo: 21, categoria: "fixo"}
 			];
 			$scope.adicionarContato = function(contato){
 				$scope.contatos.push(angular.copy(contato));
 				delete $scope.contato;
+			};
+			$scope.apagarContatos = function(contatos){
+				$scope.contatos = contatos.filter(function(contato){
+					if (!contato.selecionado) return contato;
+				});
+			};
+			$scope.isContatoSelecionado = function(contatos){
+				return contatos.some(function(contato){
+					return contato.selecionado;
+				});
 			};
 		});
 	</script>
@@ -35,20 +53,32 @@
 <body ng-controller="listaTelefonicaCtrl">
 	<div class="jumbotron">
 		<h4>{{app}}</h4>
-		<table class="table table-striped">
+		<table class="table" ng-show="contatos.length > 0">
 			<tr>
+				<th></th>
 				<th>Nome: </th>
 				<th>Telefone: </th>
+				<th>Operadora: </th>
 			</tr>
-			<tr ng-repeat="contato in contatos">
+			<tr ng-class="{selecionado: contato.selecionado}" ng-repeat="contato in contatos">
+				<td><input type="checkbox" name="checkbox" ng-model="contato.selecionado"></td>
 				<td>{{contato.nome}}</td>
 				<td>{{contato.telefone}}</td>
+				<td>{{contato.operadora.nome}}</td>
+				<td><div style="width: 20px; height: 20px;" ng-style="{'background-color': contato.cor}"></div></td>
 			</tr>
 		</table>
 		<hr>
 		<input class="form-control" type="text" name="nome" ng-model="contato.nome" placeholder="Nome">
 		<input class="form-control" type="text" name="telefone" ng-model="contato.telefone" placeholder="telefone">
-		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)">Adicionar Contato</button>
+		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome for operadora in operadoras">
+			<option value="">Selecione uma operadora</option>
+		</select>
+		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar Contato</button>
+		<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Apagar Contatos</button>
+	</div>
+	<div style="text-align: center;">
+		Criado por Gabriel Cunha
 	</div>
 </body>
 </html>
