--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 		.selecionado{background-color: #F7DC6F;}
 	</style>
 	<script type="text/javascript" src="lib/angular/angular.js"></script>
+	<script type="text/javascript" src="lib/angular/angular-messages.js"></script>
 	<script type="text/javascript">
-		angular.module("listaTelefonica", []);
+		angular.module("listaTelefonica", ["ngMessages"]);
 		angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function($scope){
 			$scope.app = "Lista Telefonica";
 			$scope.contatos = [
@@ -36,6 +37,7 @@
 			$scope.adicionarContato = function(contato){
 				$scope.contatos.push(angular.copy(contato));
 				delete $scope.contato;
+				$scope.contatoForm.$setPristine();
 			};
 			$scope.apagarContatos = function(contatos){
 				$scope.contatos = contatos.filter(function(contato){
@@ -51,7 +53,7 @@
 	</script>
 </head>
 <body ng-controller="listaTelefonicaCtrl">
-	<div class="jumbotron">
+	<div class="jumbotron" style="margin-bottom: 2%;">
 		<h4>{{app}}</h4>
 		<table class="table" ng-show="contatos.length > 0">
 			<tr>
@@ -69,15 +71,31 @@
 			</tr>
 		</table>
 		<hr>
-		<input class="form-control" type="text" name="nome" ng-model="contato.nome" placeholder="Nome">
-		<input class="form-control" type="text" name="telefone" ng-model="contato.telefone" placeholder="telefone">
-		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome for operadora in operadoras">
-			<option value="">Selecione uma operadora</option>
-		</select>
-		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar Contato</button>
+		<form name="contatoForm">
+			<input class="form-control" type="text" name="nome" ng-model="contato.nome" placeholder="Nome" ng-required="true" ng-minlength="10">
+			<input class="form-control" type="text" name="telefone" ng-model="contato.telefone" placeholder="telefone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/">
+			<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome for operadora in operadoras">
+				<option value="">Selecione uma operadora</option>
+			</select>
+		</form>
+		<div ng-show="contatoForm.nome.$dirty" ng-messages="contatoForm.nome.$error">
+			<div ng-message="required" class="alert alert-danger" style="margin-bottom: 2%;">
+				Por favor, preenxa o campo nome!
+			</div>
+			<div ng-message="minlength" class="alert alert-danger" style="margin-bottom: 2%;">
+				O campo nome deve ter no mínimo 10 caracteres.
+			</div>
+		</div>
+		<div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger" style="margin-bottom: 2%;">
+			Por favor, preenxa o campo telefone!
+		</div>
+		<div ng-show="contatoForm.telefone.$error.pattern" class="alert alert-danger">
+			O campo telefone deve ter o formato DDDDD-DDDD.
+		</div>
+		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
 		<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Apagar Contatos</button>
 	</div>
-	<div style="text-align: center;">
+	<div style="text-align: center; margin-bottom: 2%;">
 		Criado por Gabriel Cunha
 	</div>
 </body>
