--- a/index.html
+++ b/index.html
@@ -4,67 +4,19 @@
 	<title>Lista Telefonica</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css">
-	<style type="text/css">
-		.jumbotron{
-			width: 550px;
-			text-align: center;
-			margin-top: 20px;
-			margin-left: auto;
-			margin-right: auto;
-		}
-		.table{margin-top: 20px;}
-		.table tr, td{text-align: left;}
-		.form-control{margin-bottom: 5px;}
-		.selecionado{background-color: #F7DC6F;}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<script type="text/javascript" src="lib/angular/angular.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-locale_pt-br.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-messages.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/controllers/listaTelefonicaCtrl.js"></script>
+	<script type="text/javascript" src="js/services/contatosAPIService.js"></script>
+	<script type="text/javascript" src="js/services/operadorasAPIService.js"></script>
+	<script type="text/javascript" src="js/services/serialGeneratorService.js"></script>
+	<script type="text/javascript" src="js/value/configValue.js"></script>
+	<script type="text/javascript" src="js/config/serialGeneratorConfig.js"></script>
 	<script type="text/javascript">
-		angular.module("listaTelefonica", ["ngMessages"]);
-		angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function($scope, $http){
-			$scope.app = "Lista Telefonica";
-			$scope.contatos = [];
-			$scope.operadoras = [];
-
-			var carregarContatos = function(){
-				$http.get("http://localhost:3412/contatos").then(function(response){
-					$scope.contatos = response.data;
-				});
-			};
-
-			var carregarOperadoras = function(){
-				$http.get("http://localhost:3412/operadoras").then(function(response){
-					$scope.operadoras = response.data;
-				});
-			};
-
-			$scope.adicionarContato = function(contato){
-				contato.data = new Date();
-				$http.post("http://localhost:3412/contatos", contato).then(function(response){
-					delete $scope.contato;
-					$scope.contatoForm.$setPristine();
-					carregarContatos();
-				});
-			};
-
-			$scope.apagarContatos = function(contatos){
-				$scope.contatos = contatos.filter(function(contato){
-					if (!contato.selecionado) return contato;
-				});
-			};
-			$scope.isContatoSelecionado = function(contatos){
-				return contatos.some(function(contato){
-					return contato.selecionado;
-				});
-			};
-			$scope.ordenarPor = function(campo){
-				$scope.criterioDeOrdenacao = campo;
-				$scope.direcaoDaOrdenacao = !$scope.direcaoDaOrdenacao;
-			};
-			carregarContatos();
-			carregarOperadoras();
-		});
+		
 	</script>
 </head>
 <body ng-controller="listaTelefonicaCtrl">
@@ -74,6 +26,7 @@
 		<table class="table" ng-show="contatos.length > 0">
 			<tr>
 				<th></th>
+				<th>Serial</th>
 				<th><a href="" ng-click="ordenarPor('nome')">Nome</a></th>
 				<th><a href="" ng-click="ordenarPor('telefone')">Telefone</a></th>
 				<th>Operadora</th>
@@ -81,6 +34,7 @@
 			</tr>
 			<tr ng-class="{selecionado: contato.selecionado}" ng-repeat="contato in contatos | filter: {nome: criterioDeBusca} | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao">
 				<td><input type="checkbox" name="checkbox" ng-model="contato.selecionado"></td>
+				<td>{{contato.serial}}</td>
 				<td>{{contato.nome}}</td>
 				<td>{{contato.telefone}}</td>
 				<td>{{contato.operadora.nome | lowercase}}</td>
@@ -116,5 +70,6 @@
 	<div style="text-align: center; margin-bottom: 2%;">
 		Criado por Gabriel Cunha
 	</div>
+	<!--<div ng-include="view/footer.html"></div>-->
 </body>
 </html>
