--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
+	<link rel="stylesheet" type="text/css" href="css/ui.css">
 	<script type="text/javascript" src="lib/angular/angular.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-locale_pt-br.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-messages.js"></script>
@@ -17,13 +18,20 @@
 	<script type="text/javascript" src="js/config/serialGeneratorConfig.js"></script>
 	<script type="text/javascript" src="js/filters/nameFilter.js"></script>
 	<script type="text/javascript" src="js/filters/ellipsisFilter.js"></script>
-	<script type="text/javascript">
-		
-	</script>
+	<script type="text/javascript" src="js/directives/uiAlertDirective.js"></script>
 </head>
 <body ng-controller="listaTelefonicaCtrl">
 	<div class="jumbotron">
 		<h3 style="margin-bottom: 6%">{{app}}</h3>
+
+		<ui-alert title="Ops, aconteceu um problema!">
+			{{error}}
+		</ui-alert>
+
+		<ui-alert title="AngularJS">
+			Criando Diretivas - Part1
+		</ui-alert>
+		
 		<input type="text" class="form-control" name="criterioDeBusca" ng-model="criterioDeBusca" placeholder="O que você procura?">
 		<table class="table" ng-show="contatos.length > 0">
 			<tr>
@@ -58,7 +66,7 @@
 			</div>
 			<div ng-message="minlength" class="alert alert-danger" style="margin-bottom: 2%;">
 				O campo nome deve ter no mínimo 10 caracteres.
-			</di14
+			</div>
 		</div>
 		<div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger" style="margin-bottom: 2%;">
 			Por favor, preenxa o campo telefone!
@@ -69,9 +77,9 @@
 		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
 		<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Apagar Contatos</button>
 	</div>
-	<div style="text-align: center; margin-bottom: 2%;">
+	<!--<div style="text-align: center; margin-bottom: 2%;">
 		Criado por Gabriel Cunha
-	</div>
-	<!--<div ng-include="view/footer.html"></div>-->
+	</div>-->
+	<div ng-include="view/footer.html"></div>
 </body>
 </html>
