Aula11 - Modularizando o Projeto

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 	<script type="text/javascript" src="lib/angular/angular.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-locale_pt-br.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-messages.js"></script>
+	<script type="text/javascript" src="lib/serialGenerator/serialGenerator.js"></script>
+	<script type="text/javascript" src="lib/uiAccordion/uiAcc.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/controllers/listaTelefonicaCtrl.js"></script>
 	<script type="text/javascript" src="js/services/contatosAPIService.js"></script>
 	<script type="text/javascript" src="js/services/operadorasAPIService.js"></script>
-	<script type="text/javascript" src="js/services/serialGeneratorService.js"></script>
 	<script type="text/javascript" src="js/value/configValue.js"></script>
 	<script type="text/javascript" src="js/config/serialGeneratorConfig.js"></script>
 	<script type="text/javascript" src="js/filters/nameFilter.js"></script>
 	<script type="text/javascript" src="js/filters/ellipsisFilter.js"></script>
 	<script type="text/javascript" src="js/directives/uiAlertDirective.js"></script>
 	<script type="text/javascript" src="js/directives/uiDateDirective.js"></script>
-	<script type="text/javascript" src="js/directives/uiAccordionDirective.js"></script>
 </head>
 <body ng-controller="listaTelefonicaCtrl">
 	<div class="jumbotron">
