--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,14 @@
 	<script type="text/javascript" src="js/value/configValue.js"></script>
 	<script type="text/javascript" src="js/config/serialGeneratorConfig.js"></script>
 	<script type="text/javascript" src="js/config/routeConfig.js"></script>
+	<script type="text/javascript" src="js/config/interceptorsConfig.js"></script>
 	<script type="text/javascript" src="js/filters/nameFilter.js"></script>
 	<script type="text/javascript" src="js/filters/ellipsisFilter.js"></script>
 	<script type="text/javascript" src="js/directives/uiAlertDirective.js"></script>
 	<script type="text/javascript" src="js/directives/uiDateDirective.js"></script>
+	<script type="text/javascript" src="js/interceptors/timestampInterceptor.js"></script>
+	<script type="text/javascript" src="js/interceptors/errorInterceptor.js"></script>
+	<script type="text/javascript" src="js/interceptors/loadingInterceptor.js"></script>
 </head>
 <body>
 	<div ng-view></div>
